--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,15 +78,54 @@ jobs:
     - name: Build Project
       run: cmake --build build --config Release
 
-    - name: Create Debian Package
-      if: runner.os == 'Linux'
+    - name: Package Artifacts
+      shell: bash
       run: |
-        cd build
-        cpack -C Release
+        # Create a staging directory for the release
+        mkdir staging
+
+        # --- Platform-specific packaging logic ---
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          # For Windows, copy the exe, all DLLs from vcpkg, resources, and text files
+          cp build/Release/Advancely.exe staging/
+          cp vcpkg_installed/x64-windows/bin/*.dll staging/
+          cp -r build/resources staging/
+          cp build/Release/*.txt staging/
+          cp build/Release/*.md staging/
+        elif [ "$RUNNER_OS" == "macOS" ]; then
+          # For macOS, copy the .app bundle and the text files
+          cp -r build/Advancely.app staging/
+          cp build/*.txt staging/
+          cp build/*.md staging/
+        else # Linux
+          # For Linux, copy the executable, resources, and text files
+          cp build/Advancely staging/
+          cp -r build/resources staging/
+          cp build/*.txt staging/
+          cp build/*.md staging/
+        fi
+
+    - name: Upload Release Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Advancely-${{ matrix.os }}
+        path: staging/
 
     # Create and package the release, resources are included per OS
-    - name: Install Project
-      run: cmake --install build --prefix ./release --config Release
+    - name: Create and Package Release
+      shell: bash
+      run: |
+        mkdir release
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          cp build/Release/Advancely.exe release/
+          cp build/Release/*.dll release/
+          cp -r build/resources release/
+        elif [ "$RUNNER_OS" == "macOS" ]; then
+          cp -r build/Advancely.app release/
+        else
+          # For Linux, find and copy the generated .deb file
+          find build -name "*.deb" -exec cp {} release/ \;
+        fi
 
     - name: Upload Release Artifact
       uses: actions/upload-artifact@v4
