[v0.9.153] Workflows... Reduced image size for linux to 512x512.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
               --appdir AppDir \
               --executable build/Advancely \
               --desktop-file packaging/linux/advancely.desktop \
-              --icon-file resources/gui/Advancely_Logo_NoText.png \
+              --icon-file resources/gui/advancely.png \
               --output appimage
           
             # Copy the final AppImage and text files to the release folder
