--- a/packaging/linux/advancely.desktop
+++ b/packaging/linux/advancely.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Advancely
 Comment=A highly customizable and interactive tool to track Minecraft progress beyond just Advancements.
 Exec=Advancely
-Icon=Advancely_Logo_NoText
+Icon=advancely
 Terminal=false
 Type=Application
 Categories=Game;Utility;
